[package]
name = "bevy_spawnable"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/funatsufumiya/bevy_spawnable"
description = "tiny spawn utility for Bevy, to encapsulate spawn logic"
license = "WTFPL OR 0BSD"

[dev-dependencies]
bevy = { version = "^0.18.0-rc.2" }

[dependencies]
bevy = { version = "^0.18.0-rc.2", default-features = false, features = [
] }
